[tool.poetry]
name = "try-gym-2d"
version = "0.1.0"
description = ""
authors = ["Aleksey Parfyonov <kantengri3@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gym = {extras = ["classic_control"], version = "^0.24.0"}
opencv-python = "^4.6.0"
Pillow = "^9.2.0"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
