[tool.poetry]
name = "try-gym-2d"
version = "0.1.0"
description = ""
authors = ["Aleksey Parfyonov <kantengri3@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gym = {version = "^0.21", extras = ["pygame"]}
opencv-python = "^4.6.0"
Pillow = "^9.2.0"
pydantic = "^1.9.2"
pygame = "^2.1.2"
stable-baselines3 = "^1.6.0"
debugpy = "^1.6.3"
seaborn = "^0.11.2"
PyYAML = "^6.0"
huggingface-sb3 = "^2.2.3"
sb3-contrib = "^1.6.0"
optuna = "^2.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
